--- a/estilos.css
+++ b/estilos.css
@@ -5,33 +5,44 @@ body{
 header{
 	width: 100%;
 }
-
-.navegacion{
-	width: 1000px;
-	margin: 30px auto;
-	background: gray;
+ul.navbar{
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	position: absolute;
+	top: 0cm;
+	left: 2cm;
+	width: 7cm;
+}
+ul.navbar li{
+	background: chocolate;
+	margin: 0.5cm 0;
+	padding: 0.3cm;
+	border-left: 1cm solid rgb(168, 163, 163)
 }
 
-.navegacion ul{
-	list-style: none;
-}
+	ul.navbar a{
+		text-decoration: none;
+	}
+		a:link {
+			color: #141414;
+		}
+			a:visited{
+				color:rgb(241, 235, 238);
+			}
+				address{
+					margin-top: 1cm;
+					padding-top: 1cm;
+					border-top: thin dotted
+				}
 
-.menu > li{
-	position: relative;
-	display: inline-block;
-}
+				
 
-.menu > li > a{
-	display: block;
-	padding: 15px 20px;
-	color: black;
-	font-family: monospace;
-	font-size: 20px;
-	text-decoration: none;
-}
+			
+
 
 .menu li a:hover{
-	color: fuchsia ;
+	color: rgb(255, 0, 255) ;
 	transition: all .3s;
 	
 	
@@ -50,6 +61,9 @@ h1{
     
     font-family: monospace;
     color: black; 
+	text-align: center;
+	size: 15px;
+	text-decoration: underline;
 }
 
 h2{
@@ -70,6 +84,9 @@ h6{
    
 	p{
 		text-align: center;
-		color: white;
+		color: rgba(12, 12, 11, 0.959);
+		font-family: monospace;
+		font-size: 25px;
+
     }
     	
